etc/libanoncreds.h

typedef size_t ErrorCode;
typedef struct ByteBuffer {
  int64_t len;
  uint8_t *data;
} ByteBuffer;
typedef size_t ObjectHandle;
typedef const char *FfiStr;
typedef struct FfiList_FfiStr {
  size_t count;
  const FfiStr *data;
} FfiList_FfiStr;
typedef struct FfiList_FfiStr FfiStrList;
typedef struct FfiCredRevInfo {
  ObjectHandle reg_def;
  ObjectHandle reg_def_private;
  ObjectHandle status_list;
  int64_t reg_idx;
} FfiCredRevInfo;
typedef struct FfiList_FfiCredentialEntry {
  size_t count;
  const struct FfiCredentialEntry *data;
} FfiList_FfiCredentialEntry;
typedef struct FfiList_FfiCredentialProve {
  size_t count;
  const struct FfiCredentialProve *data;
} FfiList_FfiCredentialProve;
typedef struct FfiList_ObjectHandle {
  size_t count;
  const ObjectHandle *data;
} FfiList_ObjectHandle;
void anoncreds_buffer_free(struct ByteBuffer buffer);
ErrorCode anoncreds_create_credential(ObjectHandle cred_def,
                                      ObjectHandle cred_def_private,
                                      ObjectHandle cred_offer,
                                      ObjectHandle cred_request,
                                      FfiStrList attr_names,
                                      FfiStrList attr_raw_values,
                                      FfiStrList attr_enc_values,
                                      const struct FfiCredRevInfo *revocation,
                                      ObjectHandle *cred_p);
ErrorCode anoncreds_create_credential_definition(FfiStr schema_id,
                                                 ObjectHandle schema,
                                                 FfiStr tag,
                                                 FfiStr issuer_id,
                                                 FfiStr signature_type,
                                                 int8_t support_revocation,
                                                 ObjectHandle *cred_def_p,
                                                 ObjectHandle *cred_def_pvt_p,
                                                 ObjectHandle *key_proof_p);
ErrorCode anoncreds_create_credential_offer(FfiStr schema_id,
                                            FfiStr cred_def_id,
                                            ObjectHandle key_proof,
                                            ObjectHandle *cred_offer_p);
ErrorCode anoncreds_create_credential_request(FfiStr entropy,
                                              FfiStr prover_did,
                                              ObjectHandle cred_def,
                                              FfiStr link_secret,
                                              FfiStr link_secret_id,
                                              ObjectHandle cred_offer,
                                              ObjectHandle *cred_req_p,
                                              ObjectHandle *cred_req_meta_p);
ErrorCode anoncreds_create_link_secret(const char **link_secret_p);
ErrorCode anoncreds_create_or_update_revocation_state(ObjectHandle rev_reg_def,
                                                      ObjectHandle rev_status_list,
                                                      int64_t rev_reg_index,
                                                      FfiStr tails_path,
                                                      ObjectHandle rev_state,
                                                      ObjectHandle old_rev_status_list,
                                                      ObjectHandle *rev_state_p);
ErrorCode anoncreds_create_presentation(ObjectHandle pres_req,
                                        struct FfiList_FfiCredentialEntry credentials,
                                        struct FfiList_FfiCredentialProve credentials_prove,
                                        FfiStrList self_attest_names,
                                        FfiStrList self_attest_values,
                                        FfiStr link_secret,
                                        struct FfiList_ObjectHandle schemas,
                                        FfiStrList schema_ids,
                                        struct FfiList_ObjectHandle cred_defs,
                                        FfiStrList cred_def_ids,
                                        ObjectHandle *presentation_p);
ErrorCode anoncreds_create_revocation_registry_def(ObjectHandle cred_def,
                                                   FfiStr cred_def_id,
                                                   FfiStr _issuer_id,
                                                   FfiStr tag,
                                                   FfiStr rev_reg_type,
                                                   int64_t max_cred_num,
                                                   FfiStr tails_dir_path,
                                                   ObjectHandle *reg_def_p,
                                                   ObjectHandle *reg_def_private_p);
ErrorCode anoncreds_create_revocation_status_list(ObjectHandle cred_def,
                                                  FfiStr rev_reg_def_id,
                                                  ObjectHandle rev_reg_def,
                                                  ObjectHandle reg_rev_priv,
                                                  FfiStr _issuer_id,
                                                  int8_t issuance_by_default,
                                                  int64_t timestamp,
                                                  ObjectHandle *rev_status_list_p);
ErrorCode anoncreds_create_schema(FfiStr schema_name,
                                  FfiStr schema_version,
                                  FfiStr issuer_id,
                                  FfiStrList attr_names,
                                  ObjectHandle *result_p);
ErrorCode anoncreds_create_w3c_credential(ObjectHandle cred_def,
                                          ObjectHandle cred_def_private,
                                          ObjectHandle cred_offer,
                                          ObjectHandle cred_request,
                                          FfiStrList attr_names,
                                          FfiStrList attr_raw_values,
                                          const struct FfiCredRevInfo *revocation,
                                          FfiStr w3c_version,
                                          ObjectHandle *cred_p);
ErrorCode anoncreds_create_w3c_presentation(ObjectHandle pres_req,
                                            struct FfiList_FfiCredentialEntry credentials,
                                            struct FfiList_FfiCredentialProve credentials_prove,
                                            FfiStr link_secret,
                                            struct FfiList_ObjectHandle schemas,
                                            FfiStrList schema_ids,
                                            struct FfiList_ObjectHandle cred_defs,
                                            FfiStrList cred_def_ids,
                                            FfiStr w3c_version,
                                            ObjectHandle *presentation_p);
ErrorCode anoncreds_credential_definition_from_json(struct ByteBuffer json, ObjectHandle *result_p);
ErrorCode anoncreds_credential_definition_private_from_json(struct ByteBuffer json,
                                                            ObjectHandle *result_p);
ErrorCode anoncreds_credential_from_json(struct ByteBuffer json, ObjectHandle *result_p);
ErrorCode anoncreds_credential_from_w3c(ObjectHandle cred, ObjectHandle *cred_p);
ErrorCode anoncreds_credential_get_attribute(ObjectHandle handle,
                                             FfiStr name,
                                             const char **result_p);
ErrorCode anoncreds_credential_offer_from_json(struct ByteBuffer json, ObjectHandle *result_p);
ErrorCode anoncreds_credential_request_from_json(struct ByteBuffer json, ObjectHandle *result_p);
ErrorCode anoncreds_credential_request_metadata_from_json(struct ByteBuffer json,
                                                          ObjectHandle *result_p);
ErrorCode anoncreds_credential_to_w3c(ObjectHandle cred,
                                      FfiStr issuer_id,
                                      FfiStr w3c_version,
                                      ObjectHandle *cred_p);
ErrorCode anoncreds_encode_credential_attributes(FfiStrList attr_raw_values, const char **result_p);
ErrorCode anoncreds_generate_nonce(const char **nonce_p);
ErrorCode anoncreds_get_current_error(const char **error_json_p);
ErrorCode anoncreds_key_correctness_proof_from_json(struct ByteBuffer json, ObjectHandle *result_p);
void anoncreds_object_free(ObjectHandle handle);
char *anoncreds_version(void);